# symbiote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/: CONTRIBUTORS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: main.py
src/agent/: __init__.py  agent-sdk.py  agent_sdk.py  base_client.py  deepseek_sdk.py  docker-compose.yml  enum.py  llava_sdk.py  phi3_sdk.py
src/agent/phi3/: phi3-mini.sh
src/cli/: main.py
src/db/: __init__.py  connection.py  models.py  repository.py  session_manager.py
src/utils/: __init__.py  logger.py
