[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "symbiote"
version = "0.1.0"
description = "The thing living inside your system, trying to break it before anyone else can. - AI Tester of the world"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "picologging>=0.9.3",
]

[project.scripts]
symbiote = "src.cli.main:main"
